--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,53 @@
     --fuentePrincipal: 'Staatliches',cursive;
     
 }
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: var(--secundarioOscuro);
+    color: var(--blanco);
+    padding: 10px 20px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+nav ul li a {
+    color: var(--primario);
+    text-decoration: none;
+}
+
+section {
+    padding: 20px;
+}
+
+.producto {
+    border: 1px solid var(--fuentePrincipal);
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+    width: 200px;
+}
+
+.producto img {
+    max-width: 100%;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: var(--secundario);
+    color: var(--negro);
+}
