--- a/css/style.css
+++ b/css/style.css
@@ -10,52 +10,57 @@
     
 }
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
-header {
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+/* GLOBALES */
+body{
     background-color: var(--primario);
+    font-size: 1.6rem;
+    line-height: 1.5;
+
+}
+
+p{
+    font-size: 1.8rem;
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--blanco);
-    padding: 10px 20px;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 15px;
-}
-
-nav ul li a {
-    color: var(--blanco);
+a{
     text-decoration: none;
 }
 
-section {
-    padding: 20px;
-}
-
-.producto {
-    border: 1px solid var(--fuentePrincipal);
-    padding: 10px;
-    margin: 10px;
-    display: inline-block;
-    width: 200px;
-}
-
-.producto img {
+img{
     max-width: 100%;
 }
 
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: var(--secundario);
-    color: var(--negro);
+.contenedor {
+    max-width: 120rem;
+    margin: 0 auto;
 }
+
+h1,h2,h3{
+    text-align: center;
+    color: var(--secundario);
+    font-family: var(--fuentePrincipal);
+}
+
+h1{
+    font-size: 4rem;
+}
+
+h2{
+    font-size: 3.2rem;
+}
+
+h3{
+    font-size: 2.4rem;
+}
+
