--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,19 @@ h3{
     color: var(--secundario);
  }
 
+ /* Grid */
+ .grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+ }
+
+ @media (min-width: 768px){
+    .grid{
+        grid-template-columns: repeat(3,1fr);
+    }
+    
+ }
+
 /* Productos */
 .producto{
 
