--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h3{
  .grid{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
  }
 
  @media (min-width: 768px){
@@ -124,21 +125,28 @@ h3{
 
 /* Productos */
 .producto{
-
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
 }
 
 .producto__imagen{
-
+    width: 100%;
 }
-.producto__informacion{
-
- }
 
  .producto__nombre{
-
+    font-size: 4rem;
  }
 
  .producto__precio{
-    
+    font-size: 2.8rem;
+    color: var(--secundario);
+ }
+
+ .producto__nombre,
+ .producto__precio{
+    font-family: var(--fuentePrincipal);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
  }
 
