--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primario:#9c27b0;
-    --primarioOscuro: #891190;
+    --primario:#9C27B0;
+    --primarioOscuro: #89119D;
     --secundario: #FFCE00;
-    --secundarioOscuro: rgb(233,287,2);
+    --secundarioOscuro: rgb(233,187,2);
     --blanco: #FFF;
     --negro: #000;
 
@@ -38,7 +38,7 @@ a{
 }
 
 img{
-    max-width: 100%;
+    width: 100%;
 }
 
 .contenedor {
@@ -129,9 +129,7 @@ h3{
     padding: 1rem;
 }
 
-.producto__imagen{
-    width: 100%;
-}
+
 
  .producto__nombre{
     font-size: 4rem;
@@ -191,14 +189,10 @@ h3{
 
  .nosotros__imagen{
     grid-row: 1 / 2;
-    width: 100%;
+    
  }
 
- @media (min-width: 768px){
-    .nosotros__imagen{
-        grid-column: 2 / 3;
-    }
- }
+
 
  /* Bloques */
 
@@ -218,12 +212,50 @@ h3{
     text-align: center;
  }
 
- .bloque__imagen{
-    width: 100%;
- }
 
  .bloque__titulo{
     margin: 0;
  }
+
+ /* Página del producto */
+
+@media (min-width:768px){
+    .camisa{
+        display: grid;
+        grid-template-columns:  repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.formulario__campo{
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .5s ease;
+    grid-column: 1 / 3;
+}
+
+.formulario__submit:hover{
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+}
 
  
